src/seqvars/ingest/snapshots/varfish_server_worker__seqvars__ingest__header__test__variant_caller_guess@clair3_glnexus.vcf.snap
---
source: src/seqvars/ingest/header.rs
expression: "VariantCaller::guess(&vcf_header)"
---
Glnexus:
  version: v1.4.1-0-g68e25e5
  config_name: /tmp/clair3.yml
