src/seqvars/ingest/snapshots/varfish_server_worker__seqvars__ingest__header__test__variant_caller_guess@example_dragen.07.021.624.3.10.9.vcf.snap
---
source: src/seqvars/ingest/header.rs
expression: "VariantCaller::guess(&vcf_header)"
---
Dragen:
  version: "SW: 07.021.624.3.10.9, HW: 07.021.624"

