src/seqvars/ingest/snapshots/varfish_server_worker__seqvars__ingest__header__test__variant_caller_guess@example_gatk_hc.3.7-0.vcf.snap
---
source: src/seqvars/ingest/header.rs
expression: "VariantCaller::guess(&vcf_header)"
---
GatkHaplotypeCaller:
  version: 3.7-0-gcfedb67

