src/seqvars/ingest/snapshots/varfish_server_worker__seqvars__ingest__header__test__variant_caller_guess@example_gatk_hc.4.4.0.0.vcf.snap
---
source: src/seqvars/ingest/header.rs
expression: "VariantCaller::guess(&vcf_header)"
---
GatkHaplotypeCaller:
  version: 4.4.0.0

